# exocort

./: .env.example  .gitignore  AGENTS.MD  README.md  config.toml  pyproject.toml
.claude/: settings.local.json
config/: config.gemini.json  config.local.json  config.local_mac.json  config.mac.json  config.openai.json  exocort.gemini.toml  exocort.mac.toml  exocort.openai.toml
config/examples/: llm.gemini.json  llm.llama_cpp.json  llm.lmstudio.json  llm.openai.json  ocr.llama_cpp.json  ocr.lmstudio.json  ocr.lmstudio2.json  ocr.lmstudio3.json  ocr.openai.json  ocr.paddle.json  stt.faster_whisper.json  stt.gemini.json  stt.none.json  stt.openai.json
docs/: data-flow.md  processor-pipeline.md
docs/architecture/: 01-overview.md  02-pipeline.md  03-data-model.md  04-llm-contracts.md  05-storage-schema.md  06-open-questions.md  07-redesign-task-list.md  08-agentic-executors.md  09-unified-config.md  10-implementation-playbook.md  README.md
exocort/: README.md  anthropic.yaml  app_config.py  config.py  example.toml  example.yaml  gemini.yaml  local.yaml  mistral.yaml  openai.yaml  provider.py  pyproject.toml  runner.py  settings.py
exocort/capturer/: __init__.py
exocort/collector/: __init__.py  app.py  config.py  dedup.py  forward.py  vault.py
exocort/exocort/: logs.py  runner.py
exocort/processor/: __init__.py  __main__.py  adapters.py  artifacts.py  cli.py  config.py  engine.py  llm.py  models.py  service.py  storage.py  utils.py
extension/: README.md  background.js  content.js  manifest.json  popup.css  popup.html
instructions/: architecture_principles.md  coding_principles.md  notes_knowledge_principles.md  runtime_observability.md  service_principles.md
scripts/launchd/: README.md  create_exocort_control_app.sh  exocort-mac-daemon.sh
services/faster_whisper/: .env.example  README.md  app.py  config.py  config.toml  example.yaml  pyproject.toml
services/faster_whisper/app/: main.py
services/faster_whisper/app/api/v1/endpoints/: health.py  transcriptions.py
services/faster_whisper/src/: transcription.py
services/faster_whisper/src/config/: __init__.py  models.py  settings.py
services/faster_whisper/tests/: test_app_unit.py  test_config.py
services/llama_cpp/: .env.example  README.md  pyproject.toml
services/llama_cpp/app/: main.py
services/llama_cpp/src/: app.py  config.py
services/llama_cpp/src/chat/: __init__.py  models.py  service.py
services/llama_cpp/src/config/: __init__.py  models.py  settings.py
services/mac_asr/: .env.example  README.md  pyproject.toml
services/mac_asr/app/: main.py
services/mac_asr/app/api/v1/endpoints/: health.py  transcriptions.py
services/mac_asr/src/: app.py  asr.py  audio.py  cli.py  config.py  lang_detect.py  storage.py  transcribe_file.py  transcription.py  worker.py
services/mac_asr/src/asr/: __init__.py  models.py  transcription.py
services/mac_asr/src/config/: __init__.py  models.py  settings.py
services/mac_asr/tests/: test_app_unit.py  test_lang_detect_unit.py  test_locale_unit.py
services/mac_ocr/: .env.example  README.md  pyproject.toml
services/mac_ocr/app/: main.py
services/mac_ocr/src/: __init__.py  app.py  cli.py  config.py  ocr.py  storage.py
services/mac_ocr/src/config/: __init__.py  models.py  settings.py
services/mac_ocr/src/document/: __init__.py  models.py  resolver.py
services/mac_ocr/src/ocr/: __init__.py  models.py
services/mac_ocr/tests/: test_ocr.py  test_worker.py
src/: runner.py  settings.py
test/: config.yaml  test.py
tests/: test_audio_device.py  test_audio_processing.py  test_audio_vad.py  test_collector_config.py  test_formats.py  test_forward.py  test_processor_config.py  test_processor_pipeline.py  test_runner.py  test_settings.py  test_vault.py
(+96 files in other folders)
