[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exocort"
version = "0.1.0"
description = "Exocort audio and screen capturers with direct LiteLLM processing"
requires-python = ">=3.11,<3.13"
readme = "README.md"
dependencies = [
  "python-dotenv",
  "litellm",
  "sounddevice",
  "webrtcvad-wheels",
  "mss",
  "pillow",
  "ImageHash",
]

[project.optional-dependencies]
audio = [
  "sounddevice",
  "webrtcvad-wheels",
]
screen = [
  "mss",
  "pillow",
  "pywinctl",
]
test = [
  "pytest",
  "pytest-cov",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
]

[tool.uv]
managed = true
default-groups = ["dev"]

[project.scripts]
exocort = "exocort.runner:main"
exocort-audio = "exocort.capturer.audio:main"
exocort-screen = "exocort.capturer.screen:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["exocort", "."]
testpaths = ["tests", "services"]
markers = [
  "unit: fast unit tests",
  "integration: internal integration tests",
  "service: service-level tests",
  "slow: slower tests",
  "llm: llm-focused tests",
  "ocr: ocr-focused tests",
  "stt: stt-focused tests",
]
addopts = "-ra"
