[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exocort-faster-whisper-service"
version = "0.1.0"
description = "Standalone Faster Whisper API for audio transcription"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "python-multipart",
  "uvicorn[standard]",
  "faster-whisper",
  "torch",
  "torchaudio",
  "python-dotenv"
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
faster-whisper-service = "app:main"

[tool.setuptools]
py-modules = ["app", "config"]
